--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-Flask==2.1.1
-python-dotenv==0.19.2
-groq==1.0.0  # or the correct version based on the library used
+Flask
+python-dotenv
+groq  # or the correct version based on the library used
